--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Campagna SpG Verona · rev2.1.6.3</title>
+<title>Campagna SpG Verona · rev2.1.6.4</title>
 
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
 
@@ -791,6 +791,55 @@ body.ui-mobile .leaflet-popup-content{
 body.ui-mobile #mobileHint{ display:block; }
 #mobileHint.show{ opacity:1; }
 
+/* =========================================================
+   rev2.1.6.4 — MOBILE POLISH (non tocca il desktop)
+========================================================= */
+body.ui-mobile #hudScroll{ padding-bottom: 220px; }
+
+/* Raggruppi in colonna + collasso (solo mobile) */
+body.ui-mobile .hud-buttons{ flex-direction: column; align-items: stretch; gap: 10px; }
+body.ui-mobile .btnGroup{ width: 100%; min-width: 0; }
+body.ui-mobile .btnGroup .grpTitle{
+  display:flex; align-items:center; justify-content:space-between;
+  cursor:pointer; user-select:none;
+}
+body.ui-mobile .btnGroup .grpTitle::after{ content:"⌄"; opacity:.85; font-size: 14px; margin-left: 10px; }
+body.ui-mobile .btnGroup.is-open .grpTitle::after{ content:"⌃"; }
+body.ui-mobile .btnGroup .grpBtns{ display:none; }
+body.ui-mobile .btnGroup.is-open .grpBtns{
+  display:grid; grid-template-columns: repeat(2, minmax(0, 1fr));
+  gap: 8px; margin-top: 8px;
+}
+body.ui-mobile .btnGroup.is-open .grpBtns .btn{ width: 100%; }
+
+/* Mode toggle più compatto + pulsante info */
+body.ui-mobile #modeToggle{ padding: 8px; gap: 6px; }
+body.ui-mobile #modeToggle .modeBtn{ padding: 8px 10px; font-size: 12px; border-radius: 12px; }
+body.ui-mobile #modeToggle .modeHelp{ display:none; }
+body.ui-mobile #btnModeHelp{
+  padding: 8px 10px;
+  min-width: 36px;
+  font-weight: 800;
+}
+
+/* MapStats: più piccolo, in alto a sinistra, richiudibile */
+body.ui-mobile #mapStats{
+  left: 12px !important; right: auto !important;
+  top: 58px !important;
+  width: min(280px, calc(100vw - 24px)) !important;
+  padding: 9px 10px 8px !important;
+}
+
+/* Popup: X più grande e facile da tappare */
+body.ui-mobile .leaflet-popup-close-button{
+  width: 44px !important;
+  height: 44px !important;
+  line-height: 44px !important;
+  font-size: 30px !important;
+  padding: 0 !important;
+}
+body.ui-mobile .leaflet-popup-content-wrapper{ padding-top: 6px; }
+
 </style>
 </head>
 
@@ -816,6 +865,7 @@ body.ui-mobile #mobileHint{ display:block; }
 <div id="modeToggle" role="group" aria-label="Modalità selezione">
   <button class="modeBtn modeComuni" id="btnModeComuni" data-on="0">👆 Comuni</button>
   <button class="modeBtn" id="btnModeFarmacie" data-on="1">🏥 Farmacie</button>
+  <button class="modeBtn modeInfo" id="btnModeHelp" title="Info modalità" aria-label="Info modalità">ℹ︎</button>
   <div class="modeHelp" id="modeHelp">Comuni: scegli un comune · Farmacie: tocchi i marker per aprire le schede</div>
 </div>
 
@@ -1052,17 +1102,23 @@ function applyUiMode(){
   const fab = document.getElementById("hudFab");
   const modeToggle = document.getElementById("modeToggle");
 
+  // mobile groups + mapStats
+  initBtnGroupCollapsers();
+
   if(uiMode === "mobile"){
     hud.classList.add("is-collapsed"); // default: pannello chiuso
     if(fab) fab.style.display = "";
     if(modeToggle) modeToggle.style.display = "";
     setInteractionMode("comuni"); // su mobile: priorità comuni
+    setMobileGroupsDefault();
+    setMapStatsAutoCollapseForMode();
     setTimeout(() => showMobileHintOnce(), 600);
   }else{
     hud.classList.remove("is-collapsed");
     if(fab) fab.style.display = "none";
     if(modeToggle) modeToggle.style.display = "none";
     setInteractionMode("farmacie");
+    setMapStatsAutoCollapseForMode();
     // su desktop niente hint
 
   }
@@ -1085,6 +1141,81 @@ function showMobileHintOnce(){
   el.classList.add("show");
   setTimeout(() => el.classList.remove("show"), 4200);
 }
+
+
+// Helper: mostra hint (anche manuale) per qualche secondo
+function showMobileHint(msg, ms){
+  if(uiMode !== "mobile") return;
+  const el = document.getElementById("mobileHint");
+  if(!el) return;
+  el.textContent = String(msg || "");
+  el.classList.add("show");
+  clearTimeout(window.__mhTimer);
+  window.__mhTimer = setTimeout(() => el.classList.remove("show"), ms || 3200);
+}
+
+/* ===============================
+   MOBILE: GRUPPI PULSANTI (collassabili)
+================================ */
+let __btnGroupsInited = false;
+function initBtnGroupCollapsers(){
+  if(__btnGroupsInited) return;
+  __btnGroupsInited = true;
+  const groups = Array.from(document.querySelectorAll(".hud-buttons .btnGroup"));
+  groups.forEach(g=>{
+    const title = g.querySelector(".grpTitle");
+    if(!title) return;
+    // accessibilità minima
+    title.setAttribute("role","button");
+    title.tabIndex = 0;
+
+    const toggle = () => {
+      if(uiMode !== "mobile") return;
+      const isOpen = g.classList.contains("is-open");
+      if(!isOpen){
+        // per non creare "minestrone": apri uno alla volta
+        groups.forEach(gg => { if(gg !== g) gg.classList.remove("is-open"); });
+      }
+      g.classList.toggle("is-open", !isOpen);
+    };
+
+    title.addEventListener("click", (e)=>{ if(uiMode!=="mobile") return; e.preventDefault(); toggle(); });
+    title.addEventListener("keydown", (e)=>{ if(uiMode!=="mobile") return;
+      if(e.key==="Enter" || e.key===" "){ e.preventDefault(); toggle(); }
+    });
+  });
+}
+
+function setMobileGroupsDefault(){
+  const groups = Array.from(document.querySelectorAll(".hud-buttons .btnGroup"));
+  groups.forEach(g => g.classList.remove("is-open"));
+  const gComune = document.getElementById("grpComune");
+  if(gComune) gComune.classList.add("is-open"); // default: SOLO COMUNE aperto
+}
+
+function setMapStatsAutoCollapseForMode(){
+  const ms = document.getElementById("mapStats");
+  if(!ms) return;
+  clearTimeout(window.__msAutoTimer);
+
+  if(uiMode !== "mobile"){
+    ms.classList.remove("ms-collapsed");
+    return;
+  }
+
+  // mostra solo la prima volta per 3s, poi resta compatto (richiamabile con tap)
+  const key = "spg_ms_hint_seen_rev2";
+  let seen = false;
+  try{ seen = !!sessionStorage.getItem(key); }catch(e){}
+  if(seen){
+    ms.classList.add("ms-collapsed");
+    return;
+  }
+  ms.classList.remove("ms-collapsed");
+  window.__msAutoTimer = setTimeout(()=>{ ms.classList.add("ms-collapsed"); }, 3000);
+  try{ sessionStorage.setItem(key, "1"); }catch(e){}
+}
+
 
 
 function openUiChooser(){
@@ -1246,19 +1377,35 @@ function getSmartPadding(opts){
       const msRight = (r.right >= vw - 12);
       const msBottom = (r.bottom >= vh - 12);
       const msTop = (r.top <= 12);
+      const msLeft = (r.left <= 12);
 
       if(msRight) padRight = Math.max(padRight, Math.round(r.width + 18));
       if(msBottom) padBottom = Math.max(padBottom, Math.round(r.height + 18));
       if(msTop) padTop = Math.max(padTop, Math.round(r.height + 18));
+      if(msLeft) padLeft = Math.max(padLeft, Math.round(r.width + 18));
     }
   }
+
+
+// --- Overlay modeToggle (mobile, top-left) ---
+const mt = document.getElementById("modeToggle");
+if(mt && uiMode === "mobile"){
+  const r = mt.getBoundingClientRect();
+  const visible = (r.right > 0 && r.left < vw && r.bottom > 0 && r.top < vh);
+  if(visible){
+    const mtTop = (r.top <= 14);
+    const mtLeft = (r.left <= 14);
+    if(mtTop) padTop = Math.max(padTop, Math.round(r.height + 18));
+    if(mtLeft) padLeft = Math.max(padLeft, Math.round(r.width + 18));
+  }
+}
 
   return { padLeft, padTop, padRight, padBottom };
 }
 function fitBoundsSmart(bounds){
   // Centro del comune nella *porzione visibile* della mappa (esclude HUD, ignora overlay stats)
   const p = getSmartPadding({ includeStats:false });
-  const maxZ = (uiMode === "mobile") ? 12 : 14;
+  const maxZ = (uiMode === "mobile") ? 11 : 14;
   map.fitBounds(bounds, {
     paddingTopLeft: [p.padLeft, p.padTop],
     paddingBottomRight: [p.padRight, p.padBottom],
@@ -2683,6 +2830,55 @@ body.ui-mobile .leaflet-popup-content{
 body.ui-mobile #mobileHint{ display:block; }
 #mobileHint.show{ opacity:1; }
 
+/* =========================================================
+   rev2.1.6.4 — MOBILE POLISH (non tocca il desktop)
+========================================================= */
+body.ui-mobile #hudScroll{ padding-bottom: 220px; }
+
+/* Raggruppi in colonna + collasso (solo mobile) */
+body.ui-mobile .hud-buttons{ flex-direction: column; align-items: stretch; gap: 10px; }
+body.ui-mobile .btnGroup{ width: 100%; min-width: 0; }
+body.ui-mobile .btnGroup .grpTitle{
+  display:flex; align-items:center; justify-content:space-between;
+  cursor:pointer; user-select:none;
+}
+body.ui-mobile .btnGroup .grpTitle::after{ content:"⌄"; opacity:.85; font-size: 14px; margin-left: 10px; }
+body.ui-mobile .btnGroup.is-open .grpTitle::after{ content:"⌃"; }
+body.ui-mobile .btnGroup .grpBtns{ display:none; }
+body.ui-mobile .btnGroup.is-open .grpBtns{
+  display:grid; grid-template-columns: repeat(2, minmax(0, 1fr));
+  gap: 8px; margin-top: 8px;
+}
+body.ui-mobile .btnGroup.is-open .grpBtns .btn{ width: 100%; }
+
+/* Mode toggle più compatto + pulsante info */
+body.ui-mobile #modeToggle{ padding: 8px; gap: 6px; }
+body.ui-mobile #modeToggle .modeBtn{ padding: 8px 10px; font-size: 12px; border-radius: 12px; }
+body.ui-mobile #modeToggle .modeHelp{ display:none; }
+body.ui-mobile #btnModeHelp{
+  padding: 8px 10px;
+  min-width: 36px;
+  font-weight: 800;
+}
+
+/* MapStats: più piccolo, in alto a sinistra, richiudibile */
+body.ui-mobile #mapStats{
+  left: 12px !important; right: auto !important;
+  top: 58px !important;
+  width: min(280px, calc(100vw - 24px)) !important;
+  padding: 9px 10px 8px !important;
+}
+
+/* Popup: X più grande e facile da tappare */
+body.ui-mobile .leaflet-popup-close-button{
+  width: 44px !important;
+  height: 44px !important;
+  line-height: 44px !important;
+  font-size: 30px !important;
+  padding: 0 !important;
+}
+body.ui-mobile .leaflet-popup-content-wrapper{ padding-top: 6px; }
+
 </style></head><body>
     <h1>${esc(title)}</h1>
     <div class="meta">Export: ${esc(stats.data_export)} · <span class="pill">Aderiscono: ${stats.aderisce}/${stats.totale} (${stats.aderisce_pct}%)</span></div>
@@ -2825,6 +3021,55 @@ body.ui-mobile .leaflet-popup-content{
 body.ui-mobile #mobileHint{ display:block; }
 #mobileHint.show{ opacity:1; }
 
+/* =========================================================
+   rev2.1.6.4 — MOBILE POLISH (non tocca il desktop)
+========================================================= */
+body.ui-mobile #hudScroll{ padding-bottom: 220px; }
+
+/* Raggruppi in colonna + collasso (solo mobile) */
+body.ui-mobile .hud-buttons{ flex-direction: column; align-items: stretch; gap: 10px; }
+body.ui-mobile .btnGroup{ width: 100%; min-width: 0; }
+body.ui-mobile .btnGroup .grpTitle{
+  display:flex; align-items:center; justify-content:space-between;
+  cursor:pointer; user-select:none;
+}
+body.ui-mobile .btnGroup .grpTitle::after{ content:"⌄"; opacity:.85; font-size: 14px; margin-left: 10px; }
+body.ui-mobile .btnGroup.is-open .grpTitle::after{ content:"⌃"; }
+body.ui-mobile .btnGroup .grpBtns{ display:none; }
+body.ui-mobile .btnGroup.is-open .grpBtns{
+  display:grid; grid-template-columns: repeat(2, minmax(0, 1fr));
+  gap: 8px; margin-top: 8px;
+}
+body.ui-mobile .btnGroup.is-open .grpBtns .btn{ width: 100%; }
+
+/* Mode toggle più compatto + pulsante info */
+body.ui-mobile #modeToggle{ padding: 8px; gap: 6px; }
+body.ui-mobile #modeToggle .modeBtn{ padding: 8px 10px; font-size: 12px; border-radius: 12px; }
+body.ui-mobile #modeToggle .modeHelp{ display:none; }
+body.ui-mobile #btnModeHelp{
+  padding: 8px 10px;
+  min-width: 36px;
+  font-weight: 800;
+}
+
+/* MapStats: più piccolo, in alto a sinistra, richiudibile */
+body.ui-mobile #mapStats{
+  left: 12px !important; right: auto !important;
+  top: 58px !important;
+  width: min(280px, calc(100vw - 24px)) !important;
+  padding: 9px 10px 8px !important;
+}
+
+/* Popup: X più grande e facile da tappare */
+body.ui-mobile .leaflet-popup-close-button{
+  width: 44px !important;
+  height: 44px !important;
+  line-height: 44px !important;
+  font-size: 30px !important;
+  padding: 0 !important;
+}
+body.ui-mobile .leaflet-popup-content-wrapper{ padding-top: 6px; }
+
 </style>
 </head>
 <body>
@@ -2937,6 +3182,14 @@ document.getElementById("btnExportAderisce")?.addEventListener("click", () => {
   // Modalità selezione
   if(btnModeComuni) btnModeComuni.addEventListener("click", (e)=>{ e.preventDefault(); setInteractionMode("comuni"); });
   if(btnModeFarmacie) btnModeFarmacie.addEventListener("click", (e)=>{ e.preventDefault(); setInteractionMode("farmacie"); });
+
+const btnModeHelp = document.getElementById("btnModeHelp");
+if(btnModeHelp){
+  btnModeHelp.addEventListener("click", (e)=>{
+    e.preventDefault();
+    showMobileHint("Comuni: scegli un comune (mappa o ricerca). Farmacie: tocchi i marker per aprire le schede.", 4200);
+  });
+}
 
   // Applica UI mode iniziale (IMPORTANTE: dopo che farmMarkers è definito)
   applyUiMode();
